[package]
name = "scheduler-v0"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
thiserror = "1.0.40"
backoff = "0.4.0"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }

[dependencies.kube]
version = "0.83.0"
features = ["runtime", "client", "rustls-tls"]
default-features = false
