[package]
name = "scheduler-v0"
version = "0.1.0"
edition = "2021"

[dependencies]
backoff = "0.4.0"
futures = "0.3.28"
hyper = "0.14.27"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube_quantity = "0.6.1"
mockall = "0.11.4"
mockall_double = "0.3.0"
rand = "0.8.5"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dependencies.kube]
version = "0.83.0"
features = ["runtime", "client", "rustls-tls"]
default-features = false

[dev-dependencies]
rstest = "0.18.1"
